--- a/odd.css
+++ b/odd.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url("picture/rogo.png");
+	background-image: url("https://github.com/torosanmon/mato/blob/main/picture/rogo.png?raw=true");
 	background-size: cover;
 	animation-name:fadeInAnime;
 	animation-duration:1s;
